--- a/wobsite/_config.yml
+++ b/wobsite/_config.yml
@@ -2,13 +2,10 @@
 title: Sentiment Clusters
 email: tstirrat@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  An approach to analyzing the content and sentiments of tweets
+  through natural language processing and network theory.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
 
 # Build settings
 markdown: kramdown
