--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   An approach to analyzing the content and sentiments of tweets
   through natural language processing and network theory.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://tstirrat15.github.io/sentimentClusters" # the base hostname & protocol for your site
 
 # Build settings
 markdown: kramdown
@@ -25,9 +25,6 @@ navigation:
 - text: Finding Communities
   title: Finding Communities
   url: /finding_communities/
-- text: Assumptions
-  url: /assumptions/
-  title: Assumptions
 - text: Analysis
   title: Analysis
   url: /analysis/
