--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@
 title: Sentiment Clusters
 email: tstirrat@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  An approach to analyzing the content and sentiments of tweets
-  through natural language processing and network theory.
+  A Cornell College STA255 Big Data project
 baseurl: "/sentimentClusters" # the subpath of your site, e.g. /blog/
 url: "https://tstirrat15.github.io/" # the base hostname & protocol for your site
 
@@ -13,9 +12,9 @@ markdown: kramdown
 # Used for Navigation Links.
 # Needs to be updated every time there's a new page added.
 navigation:
-- text: Sources
-  title: Data and tools
-  url: /sources/
+- text: Home
+  title: The Homepage
+  url: /
 - text: Data Collection
   url: /data_collection/
   title: How we pulled it together
